# temporary-freevrg

./: .env.example  .gitignore  README.md  README.zh-CN.md  main.py  pyproject.toml  technical_design.md
agents/: __init__.py  base.py  pattern_agent.py  rule_agent.py
codeql/first-pilot/: qlpack.yml  说明.md
core/: __init__.py  config.py  llm.py  models.py  observability.py  orchestrator.py  ql_policy.py  validator.py
data/rules/: qlpack.yml
data/samples/: FreeBSD-SA-15:12.json  FreeBSD-SA-15:20.json  FreeBSD-SA-15:24.json  FreeBSD-SA-16:07.json  FreeBSD-SA-16:11.json  FreeBSD-SA-16:22.json  FreeBSD-SA-16:23.json  FreeBSD-SA-16:25.json  FreeBSD-SA-16:27.json  FreeBSD-SA-16:33.json  FreeBSD-SA-16:35.json  FreeBSD-SA-16:36.json  FreeBSD-SA-16:37.json  FreeBSD-SA-16:38.json  FreeBSD-SA-17:06.json  FreeBSD-SA-18:14.json  FreeBSD-SA-18:15.json  FreeBSD-SA-19:09.json  FreeBSD-SA-19:12.json  FreeBSD-SA-19:16.json  FreeBSD-SA-19:20.json  FreeBSD-SA-19:21.json  FreeBSD-SA-20:01.json  FreeBSD-SA-20:11.json  FreeBSD-SA-20:18.json  FreeBSD-SA-20:26.json  FreeBSD-SA-20:30.json  FreeBSD-SA-20:33.json  FreeBSD-SA-21:03.json  FreeBSD-SA-21:12.json  FreeBSD-SA-21:13.json  FreeBSD-SA-21:14.json  FreeBSD-SA-21:15.json  FreeBSD-SA-22:03.json  FreeBSD-SA-22:05.json  FreeBSD-SA-22:08.json  FreeBSD-SA-22:12.json  FreeBSD-SA-22:15.json  FreeBSD-SA-23:01.json  FreeBSD-SA-23:02.json  (+24 more)
docs/: imported-assets.md
docs/research-notes/: 01 · 项目背景与目标.md  02 · 系统架构.md  FreeVRG 数据集说明文档.md  PatternAgent 输入规范.md
prompts/: pattern_agent.md  rule_agent.md
tests/: test_pipeline.py
(+143 files in other folders)
